--- a/User-management/public/style/output.css
+++ b/User-management/public/style/output.css
@@ -1139,6 +1139,10 @@ video {
   width: 2.25rem;
 }
 
+.w-\[50\%\] {
+  width: 50%;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -1293,6 +1297,10 @@ video {
 
 .max-w-\[768px\] {
   max-width: 768px;
+}
+
+.max-w-\[80vw\] {
+  max-width: 80vw;
 }
 
 .max-w-fit {
@@ -1798,10 +1806,6 @@ video {
   border-radius: var(--nextui-radius-large);
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1942,6 +1946,11 @@ video {
   border-color: hsl(var(--nextui-background) / var(--nextui-background-opacity, var(--tw-border-opacity)));
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-danger {
   --tw-border-opacity: 1;
   border-color: hsl(var(--nextui-danger) / var(--nextui-danger-opacity, var(--tw-border-opacity)));
@@ -1970,6 +1979,11 @@ video {
 .border-foreground {
   --tw-border-opacity: 1;
   border-color: hsl(var(--nextui-foreground) / var(--nextui-foreground-opacity, var(--tw-border-opacity)));
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .border-primary {
@@ -2199,11 +2213,6 @@ video {
   background-color: hsl(var(--nextui-foreground) / 0.1);
 }
 
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
 .bg-overlay\/30 {
   background-color: hsl(var(--nextui-overlay) / 0.3);
 }
@@ -2316,10 +2325,6 @@ video {
 
 .p-2\.5 {
   padding: 0.625rem;
-}
-
-.p-20 {
-  padding: 5rem;
 }
 
 .p-3 {
@@ -7640,9 +7645,15 @@ video {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:max-w-\[60vw\] {
+    max-width: 60vw;
+  }
+}
+
 @media (min-width: 1024px) {
-  .lg\:max-w-\[50\%\] {
-    max-width: 50%;
+  .lg\:max-w-\[45vw\] {
+    max-width: 45vw;
   }
 }
 
